k8s/blog_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: blog
spec:
  selector:
    app: blog-client
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: blog
spec:
  selector:
    app: blog-backend
  ports:
  - port: 8080
    targetPort: 8080
