k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  labels:
    name: blog-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: pablodelacuesta.es
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
  - host: api.pablodelacuesta.es
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port: 
              number: 8080
